--- a/package.json
+++ b/package.json
@@ -7,14 +7,18 @@
     "build": "next build",
     "start": "next start",
     "seed": "ts-node prisma/seed.ts",
-    "lint": "next lint"
+    "lint": "next lint",
+    "db:reset": "prisma migrate reset --force",
+    "db:seed": "prisma db seed"
   },
   "dependencies": {
     "@auth/prisma-adapter": "^1.0.0",
+    "@next-auth/prisma-adapter": "^1.0.7",
     "@prisma/client": "^6.2.1",
     "lucide-react": "^0.473.0",
     "next": "15.1.5",
     "next-auth": "^4.24.11",
+    "next-i18next": "^15.4.1",
     "next-themes": "^0.4.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
@@ -31,5 +35,8 @@
     "tailwindcss": "^3.4.1",
     "ts-node": "^10.9.2",
     "typescript": "^5"
+  },
+  "prisma": {
+    "seed": "ts-node --compiler-options {\"module\":\"CommonJS\"} prisma/seed.ts"
   }
 }
